--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,21 @@ body{
             color: $text-color;
         }
 }
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+}
+
+header{
+    grid-column: 1/6;
+    @include flex($justify: space-between);
+    background-color: $nav-color;
+    border-bottom: 4px solid $primary-color;
+}
