--- a/scss/style.css
+++ b/scss/style.css
@@ -34,4 +34,33 @@ header {
   justify-content: space-between;
   background-color: #ffffff;
   border-bottom: 4px solid #3a8479;
+}
+
+nav {
+  color: #484848;
+  height: 4em;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav img {
+  width: 70px;
+}
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style-type: none;
+}
+nav a {
+  color: #484848;
+  padding: 0.5em;
+  margin: 0.5em;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+}
+nav a:hover {
+  color: #3a8479;
 }/*# sourceMappingURL=style.css.map */
