Tilføjelse af scss
Opsat partial fil og brug af modules

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,35 +1,20 @@
-/*Variabler*/
-$bg-color: #F0f0f0;
-$nav-color: #ffffff;
-$footer-color: #0a1f1c;
-$primary-color: #3a8479;
-$secondary-color: #133833;
-$text-color: #484848;
-$padding: 0.5em;
-$font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-/*Mixins*/
-@mixin flex($justify:center, $align:center){
-    display: flex;
-    align-items: $align;
-    justify-content: $justify;
-}
+@use 'partial';
 
 body{
     margin: 0;
     box-sizing: border-box;
-    font-family: $font;
-    background-color: $bg-color;
+    font-family: partial.$font;
+    background-color: partial.$bg-color;
 
         p{
             font-size: 16px;
-            color: $text-color;
+            color: partial.$text-color;
             line-height: 1.5;
         }
 
         h1, h2, h3, h4, h5, h6{
             font-weight: 600;
-            color: $text-color;
+            color: partial.$text-color;
         }
 }
 
@@ -46,38 +31,196 @@ img{
 
 header{
     grid-column: 1/6;
-    @include flex($justify: space-between);
-    background-color: $nav-color;
-    border-bottom: 4px solid $primary-color;
+    @include partial.flex($justify: space-between);
+    background-color: partial.$nav-color;
+    border-bottom: 4px solid partial.$primary-color;
 }
 
 nav{
-    color: $text-color;
+    color: partial.$text-color;
     height: 4em;
     padding: 1em;
 
-    @include flex($justify:space-between);
+    @include partial.flex($justify:space-between);
 
         img{
             width: 70px;
         }
 
         ul{
-            @include flex($justify: space-between);
+            @include partial.flex($justify: space-between);
             list-style-type: none;
         }
 
         a{
-            color: $text-color;
-            padding: $padding;
-            margin: $padding;
+            color: partial.$text-color;
+            padding: partial.$padding;
+            margin: partial.$padding;
             font-size: 20px;
             font-weight: bold;
             text-decoration: none;
         }
 
         a:hover{
-            color: $primary-color;
+            color: partial.$primary-color;
 
         }
+}
+
+.mobile-nav{
+
+    .bars{
+        display: none;
+    }
+}
+
+.toggleShow{
+    display: flex;
+    flex-direction: column;
+}
+
+.active{
+    color: partial.$primary-color;
+}
+
+/*Header billeder/ Banner*/
+
+.header-img{
+    position: relative;
+    margin-bottom: 1em;
+
+        .banner-tekst{
+            position: absolute;
+            top: 25%;
+            left: 5%;
+        }
+
+        h1{
+            font-size: 3.5vw;
+        }
+
+        p{
+            font-size: 2vw;
+        }
+
+        a{
+            @include partial.btn;
+            position: absolute;
+        }
+
+        .bg-billede-mobil{
+            display: none;
+        }
+}
+
+/*Hovedindhold*/
+
+main{
+    grid-column: 1/6;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+
+        h2{
+            grid-column: 1/7;
+            text-align: center;
+            font-size: 30px;
+        }
+    .cta-wrapper{
+        grid-column: 1/7;
+        display: flex;
+        justify-content: space-around;
+    }
+
+}
+
+/*CTA bokse*/
+
+.cta-1{
+    @include partial.cta-boks;
+
+        img{
+            width: 60%;
+            margin: 0 auto;
+            display: block;
+        }
+        a{
+            @include partial.btn;
+            display: block;
+        }
+        p{
+            margin-bottom:2em;
+        }
+}
+
+.cta-2{
+    @include partial.cta-boks;
+
+        img{
+            width: 60%;
+            margin: 0 auto;
+            display: block;
+        }
+        a{
+            @include partial.btn;
+            display: block;
+        }
+        p{
+            margin-bottom:2em;
+        }
+}
+
+.cta-3{
+    @include partial.cta-boks;
+
+        img{
+            width: 60%;
+            margin: 0 auto;
+            display: block;
+        }
+        a{
+            @include partial.btn;
+            display: block;
+        }
+        p{
+            margin-bottom:2em;
+        }
+}
+
+/* Tekst/billede sektion*/
+
+.txt-img-section{
+    grid-column: 1/7;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+
+.txt{
+    grid-column: 1/5;
+    background-color: partial.$secondary-color;
+    padding: 2em 4em 4em 4em;
+
+        p{
+            color: partial.$bg-color;
+        }
+        p:nth-of-type(4){
+            margin-bottom: 3em;
+        }
+
+        h2{
+            color: partial.$bg-color;
+            text-align: left;
+        }
+}
+
+.secondary-btn{
+    @include partial.btn($bg-color: transparent);
+    border: 2px solid #ffffff;
+}
+
+.billede{
+    grid-column: 5/8;
+    background-image: url(../img/presentation.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
