--- a/scss/style.css
+++ b/scss/style.css
@@ -63,4 +63,177 @@ nav a {
 }
 nav a:hover {
   color: #3a8479;
+}
+
+.mobile-nav .bars {
+  display: none;
+}
+
+.toggleShow {
+  display: flex;
+  flex-direction: column;
+}
+
+.active {
+  color: #3a8479;
+}
+
+/*Header billeder/ Banner*/
+.header-img {
+  position: relative;
+  margin-bottom: 1em;
+}
+.header-img .banner-tekst {
+  position: absolute;
+  top: 25%;
+  left: 5%;
+}
+.header-img h1 {
+  font-size: 3.5vw;
+}
+.header-img p {
+  font-size: 2vw;
+}
+.header-img a {
+  background-color: #3a8479;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  position: absolute;
+}
+.header-img .bg-billede-mobil {
+  display: none;
+}
+
+/*Hovedindhold*/
+main {
+  grid-column: 1/6;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+main h2 {
+  grid-column: 1/7;
+  text-align: center;
+  font-size: 30px;
+}
+main .cta-wrapper {
+  grid-column: 1/7;
+  display: flex;
+  justify-content: space-around;
+}
+
+/*CTA bokse*/
+.cta-1 {
+  width: 20vw;
+  background-color: #ffffff;
+  padding: 2em;
+  margin: 2em auto;
+}
+.cta-1 img {
+  width: 60%;
+  margin: 0 auto;
+  display: block;
+}
+.cta-1 a {
+  background-color: #3a8479;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+.cta-1 p {
+  margin-bottom: 2em;
+}
+
+.cta-2 {
+  width: 20vw;
+  background-color: #ffffff;
+  padding: 2em;
+  margin: 2em auto;
+}
+.cta-2 img {
+  width: 60%;
+  margin: 0 auto;
+  display: block;
+}
+.cta-2 a {
+  background-color: #3a8479;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+.cta-2 p {
+  margin-bottom: 2em;
+}
+
+.cta-3 {
+  width: 20vw;
+  background-color: #ffffff;
+  padding: 2em;
+  margin: 2em auto;
+}
+.cta-3 img {
+  width: 60%;
+  margin: 0 auto;
+  display: block;
+}
+.cta-3 a {
+  background-color: #3a8479;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+.cta-3 p {
+  margin-bottom: 2em;
+}
+
+/* Tekst/billede sektion*/
+.txt-img-section {
+  grid-column: 1/7;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.txt {
+  grid-column: 1/5;
+  background-color: #133833;
+  padding: 2em 4em 4em 4em;
+}
+.txt p {
+  color: #F0f0f0;
+}
+.txt p:nth-of-type(4) {
+  margin-bottom: 3em;
+}
+.txt h2 {
+  color: #F0f0f0;
+  text-align: left;
+}
+
+.secondary-btn {
+  background-color: transparent;
+  padding: 0.8em 1em;
+  border-radius: 8px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  border: 2px solid #ffffff;
+}
+
+.billede {
+  grid-column: 5/8;
+  background-image: url(../img/presentation.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }/*# sourceMappingURL=style.css.map */
